# ChangeLog for dev-java/netbeans-profiler
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-profiler/ChangeLog,v 1.4 2011/08/05 10:12:20 fordfrog Exp $

*netbeans-profiler-7.0.1 (05 Aug 2011)

  05 Aug 2011; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-profiler-7.0.1.ebuild:
  Version bump

*netbeans-profiler-7.0 (21 Apr 2011)

  21 Apr 2011; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-profiler-7.0_rc2.ebuild, +netbeans-profiler-7.0.ebuild:
  Bumped to latest version

*netbeans-profiler-7.0_rc2 (08 Apr 2011)

  08 Apr 2011; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-profiler-7.0_rc1.ebuild, +netbeans-profiler-7.0_rc2.ebuild:
  Bumped to rc2

*netbeans-profiler-7.0_rc1 (30 Mar 2011)

  30 Mar 2011; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-profiler-7.0_rc1.ebuild, +metadata.xml:
  Added new ebuild
