@@ -1,113 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-profiler/netbeans-profiler-7.0.ebuild,v 1.1 2011/04/21 10:35:31 fordfrog Exp $
-
-EAPI="4"
-WANT_ANT_TASKS="ant-nodeps"
-inherit eutils java-pkg-2 java-ant-2
-
-DESCRIPTION="Netbeans Profiler Cluster"
-HOMEPAGE="http://netbeans.org/projects/profiler"
-SLOT="7.0"
-SOURCE_URL="http://download.netbeans.org/netbeans/7.0/final/zip/netbeans-7.0-201104080000-src.zip"
-SRC_URI="${SOURCE_URL}
-	http://dev.gentoo.org/~fordfrog/distfiles/netbeans-${SLOT}-build.xml-r1.patch.bz2"
-LICENSE="|| ( CDDL GPL-2-with-linking-exception )"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-S="${WORKDIR}"
-
-CDEPEND="~dev-java/netbeans-ide-${PV}
-	~dev-java/netbeans-java-${PV}
-	~dev-java/netbeans-platform-${PV}"
-DEPEND=">=virtual/jdk-1.6
-	app-arch/unzip
-	${CDEPEND}
-	dev-java/javahelp:0"
-RDEPEND=">=virtual/jdk-1.6
-	${CDEPEND}"
-
-INSTALL_DIR="/usr/share/${PN}-${SLOT}"
-
-EANT_BUILD_XML="nbbuild/build.xml"
-EANT_BUILD_TARGET="rebuild-cluster"
-EANT_EXTRA_ARGS="-Drebuild.cluster.name=nb.cluster.profiler -Dext.binaries.downloaded=true"
-JAVA_PKG_BSFIX="off"
-
-src_unpack() {
-	unpack $(basename ${SOURCE_URL})
-
-	einfo "Deleting bundled jars..."
-	find -name "*.jar" -type f -delete
-
-	unpack netbeans-7.0-build.xml-r1.patch.bz2
-}
-
-src_prepare() {
-	einfo "Deleting bundled class files..."
-	find -name "*.class" -type f | xargs rm -vf
-
-	epatch netbeans-7.0-build.xml-r1.patch
-
-	# Support for custom patches
-	if [ -n "${NETBEANS70_PATCHES_DIR}" -a -d "${NETBEANS70_PATCHES_DIR}" ] ; then
-		local files=`find "${NETBEANS70_PATCHES_DIR}" -type f`
-
-		if [ -n "${files}" ] ; then
-			einfo "Applying custom patches:"
-
-			for file in ${files} ; do
-				epatch "${file}"
-			done
-		fi
-	fi
-
-	einfo "Symlinking external libraries..."
-	java-pkg_jar-from --build-only --into javahelp/external javahelp jhall.jar jhall-2.0_05.jar
-
-	einfo "Linking in other clusters..."
-	mkdir "${S}"/nbbuild/netbeans || die
-	pushd "${S}"/nbbuild/netbeans >/dev/null || die
-
-	ln -s /usr/share/netbeans-ide-${SLOT} ide || die
-	cat /usr/share/netbeans-ide-${SLOT}/moduleCluster.properties >> moduleCluster.properties || die
-	touch nb.cluster.ide.built
-
-	ln -s /usr/share/netbeans-java-${SLOT} java || die
-	cat /usr/share/netbeans-java-${SLOT}/moduleCluster.properties >> moduleCluster.properties || die
-	touch nb.cluster.java.built
-
-	ln -s /usr/share/netbeans-platform-${SLOT} platform || die
-	cat /usr/share/netbeans-platform-${SLOT}/moduleCluster.properties >> moduleCluster.properties || die
-	touch nb.cluster.platform.built
-
-	popd >/dev/null || die
-
-	java-pkg-2_src_prepare
-}
-
-src_install() {
-	pushd nbbuild/netbeans/profiler >/dev/null || die
-
-	insinto ${INSTALL_DIR}
-
-	grep -E "/profiler$" ../moduleCluster.properties > "${D}"/${INSTALL_DIR}/moduleCluster.properties || die
-
-	doins -r *
-
-	for file in lib/deployed/cvm/linux/*.so ; do
-		fperms 755 ${file}
-	done
-
-	for file in lib/deployed/jdk*/linux*/*.so ; do
-		fperms 755 ${file}
-	done
-
-	for file in remote-pack-defs/*.sh ; do
-		fperms 755 ${file}
-	done
-
-	popd >/dev/null || die
-
-	dosym ${INSTALL_DIR} /usr/share/netbeans-nb-${SLOT}/profiler
-}
